--- a/UserDetails/UserDetails.csproj
+++ b/UserDetails/UserDetails.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserDetails.cs" />
     <EmbeddedResource Include="FormAddressDetails.resx">
       <DependentUpon>FormAddressDetails.cs</DependentUpon>
     </EmbeddedResource>
